fixed: dialog height on mobile

--- a/js/app/restaurant/item.scss
+++ b/js/app/restaurant/item.scss
@@ -60,7 +60,7 @@
   }
   @media (max-width: $screen-xs-max) {
     width: calc(100% - 30px);
-    height: calc(100vh - 30px);
+    height: calc(100% - 30px);
   }
 }
 
